Update book and docs

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Bókatilraun"
-author: "Ingó"
+title: "Hagnýtt stærðfræði í námi og kennslu"
+author: "Ingólfur Gíslason"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -12,16 +12,31 @@ description: |
   The HTML output format for this example is bookdown::gitbook,
   set in the _output.yml file.
 link-citations: yes
-github-repo: rstudio/bookdown-demo
+github-repo: rafauga/tilraun
 ---
 
-# Um þetta skjal
+# Um textann {#umtextann}
 
-Þetta er prófun á kerfinu til að gera bækur. Með knitr og Git.
+Þessi texti er um stærðfræðileg líkön, framsetningu gagna og ályktanir sem hægt er að draga af gögnunum, en auk þess er hún um kennslu þar sem þetta eru viðfangsefnin. Hún er hugsuð sem kennsluefni í námskeiðinu Hagnýtt stærðfræði í námi og kennslu sem er fyrir stærðfræðikennaranema við Menntavísindasvið Háskóla Íslands. Hún gæti þó nýst nemendum í öðrum námskeiðum og jafnvel nemendum í framhaldsskólum.
 
-## Undirkafli hér 
+Í textanum er áherslan á undirstöðuhugmyndir en ekki á tæknilegar útfærslur. Þó eru mörg dæmi þar sem við notum tölfræðiforritið R og önnur forrit, en þau dæmi þjóna fyrst og fremst hugmyndunum. Hér er ekki fjallað um ýmsa þætti gagnavinnslu og gagnavísinda, svo sem umbreytingu hrágagna á þægilegri form eða fágaðar tölfræðiaðferðir. Ekki er gert ráð fyrir þekkingu á stærðfræðikenningum eins og stærðfræðigreiningu eða línulegri algebru og þær eru ekki kynntar hér. 
 
-Já já.
+Form textans er fyrst og fremst sem röð verkefna. Mörg verkefni eru kenningarleg en önnur vísa til raunverulegra gagna og enn önnur beina athyglinni að kennslufræði. Gengið er út frá því að nemendur vinni bæði saman og með kennara sem hefur góða þekkingu á efninu, en áhugasamar manneskjur utan slíks samhengis gætu ef til vill nýtt sér textann líka. Verkefnum er raðað þannig að sum efni koma endurtekið fram, og stundum í nýju samhengi eða með aukinni dýpt. 
 
-## Annar undirkafli
+## Kennslufræðilegar forsendur 
+
+Til þess að læra krefjandi fræði þarf nemandinn að brjóta heilann. Þess vegna er skipulag textans þannig að lesandi/nemandi ætti að glíma við verkefni áður en sett er fram einhver tiltekin aðferð til að leysa „verkefni af þeirri gerð“. Í mörgum hefðbundnum kennslubókum er aðferð fyrst sett fram, þá sýnidæmi, og loks koma dæmi fyrir nemendur til að leysa. Gallinn við það skipulag er að nemendur fá ekki tækifæri til að brjóta heilann um efnið sjálft til að byrja með og svo fá þeir ekki heldur tækifæri til að hugsa um það hvenær aðferðin á við og hvenær ekki (þeir vita að það á einmitt að nota þessa tilteknu aðferð við verkefnin sem fylgja beint á eftir). Það er hins vegar ekkert sem útilokar að kennari (eða texti) útskýri aðferðir eftir að nemandi hefur reynt sig við verkefni -- þó að vænlegast sé að það sé gert í samræðu og samstarfi nemenda og kennara. 
+
+## Notkun bókar og tungumál
+
+Best er ef lesandi hefur aðgang að tölvu og geti keyrt R-skipanir. Þetta er hægt í flestum tölvum, í vafra, eða með því að hala niður R forritinu og/eða einhverjum framenda sem tengist R. Þar sem netið er síbreytilegt er líklega best að mæla einfaldlega með vef-leit að slíkri leið.  
+
+Ég ávarpa lesanda textans ýmist sem nemanda (hann), lesanda (hann), en stundum nota ég „þau“, „öll“, og önnur orð til að gefa til kynna að öll eru velkomin að lesa og læra af þessum texta, og persónur í verkefnatextum geta verið af ólíku kyni. 
+
+Bókina má aðlaga og nýta að vild, að hluta eða í heild, með eftirfarandi skilyrðum:
+
+1. Bókin sé ekki nýtt til að valda manneskjum skaða, græða peninga, eða til að stuðla að auknum ójöfnuði milli fólks.  
+
+1. Ef umtalsverðir hlutar eru nýttir í öðru verki sé upprunans hér getið.  
+
 
